docs/v4.0.2/_sources/gallery/extras/coupling_heatmap.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/extras/coupling_heatmap.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_extras_coupling_heatmap.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_extras_coupling_heatmap.py:


Coupling heatmap of a sphere
=================================

PyMieSim makes it easy to create a source and a scatterer. With these objects
defined, it is possible to use PyMieSim to find the scattering efficiency of the
scatterer. This feature can be used to plot a graph of the scattering efficiency
of a sphere as a function of the permittivity and the size parameter.

.. GENERATED FROM PYTHON SOURCE LINES 10-71



.. image-sg:: /gallery/extras/images/sphx_glr_coupling_heatmap_001.png
   :alt: Coupling power [Watt]
   :srcset: /gallery/extras/images/sphx_glr_coupling_heatmap_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /opt/hostedtoolcache/Python/3.11.14/x64/lib/python3.11/site-packages/numpy/ma/core.py:2892: ComplexWarning: Casting complex values to real discards the imaginary part
      _data = np.array(data, dtype=dtype, copy=copy,
    /opt/hostedtoolcache/Python/3.11.14/x64/lib/python3.11/site-packages/matplotlib/cbook.py:1355: ComplexWarning: Casting complex values to real discards the imaginary part
      return np.asarray(x, float)






|

.. code-block:: Python


    import numpy
    from PyMieSim.units import ureg
    import matplotlib.pyplot as plt

    from PyMieSim.experiment.detector import PhotodiodeSet
    from PyMieSim.experiment.scatterer import SphereSet
    from PyMieSim.experiment.source import GaussianSet, PolarizationSet
    from PyMieSim.experiment import Setup

    from PyOptik import Material
    import PyMieSim
    PyMieSim.debug_mode = True

    polarization_state = PolarizationSet(
        angles=[90] * ureg.degree,  # Linear polarization at 90 degrees
    )

    source = GaussianSet(
        wavelength=[400] * ureg.nanometer,
        polarization=polarization_state,  # Linear polarization at 90 degrees
        optical_power=[1e-3] * ureg.watt,
        numerical_aperture=[0.2] * ureg.AU,
    )

    scatterer = SphereSet(
        diameter=numpy.linspace(1, 2000, 100) * ureg.nanometer,
        refractive_index=numpy.linspace(1.3, 2.1, 100) * ureg.RIU,
        medium_material=[Material.water],
        source=source
    )

    detector = PhotodiodeSet(
        polarization_filter=[0] * ureg.degree,
        numerical_aperture=[0.3] * ureg.RIU,
        phi_offset=[0] * ureg.degree,
        gamma_offset=[0] * ureg.degree,
        sampling=[400]
    )

    experiment = Setup(scatterer=scatterer, source=source, detector=detector)

    values = experiment.get("coupling", add_units=False, as_numpy=True)


    figure, ax = plt.subplots(1, 1)

    image = ax.pcolormesh(
        scatterer.refractive_index.values,
        scatterer.diameter,
        values,
        shading="auto"
    )
    ax.set(
        xlabel="Permittivity",
        ylabel=r"Diameter [$\mu$m]",
        title="Coupling power [Watt]"
    )
    plt.colorbar(mappable=image)

    plt.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 2.109 seconds)


.. _sphx_glr_download_gallery_extras_coupling_heatmap.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: coupling_heatmap.ipynb <coupling_heatmap.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: coupling_heatmap.py <coupling_heatmap.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: coupling_heatmap.zip <coupling_heatmap.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
